--- a/Engine/RHI_D3D12/Engine-RHI-D3D12.vcxproj.filters
+++ b/Engine/RHI_D3D12/Engine-RHI-D3D12.vcxproj.filters
@@ -498,4 +498,7 @@
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
+  </ItemGroup>
 </Project>
