--- a/Engine/Renderer/Engine-Renderer.vcxproj
+++ b/Engine/Renderer/Engine-Renderer.vcxproj
@@ -19,10 +19,10 @@
     </ProjectConfiguration>
   </ItemGroup>
   <PropertyGroup Label="Globals">
-    <VCProjectVersion>17.0</VCProjectVersion>
+    <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{c901be66-8350-4df9-8576-50ce5f052836}</ProjectGuid>
-    <RootNamespace>EngineCore</RootNamespace>
+    <ProjectGuid>{434146a2-c1af-4d85-8e9b-2faf1727b469}</ProjectGuid>
+    <RootNamespace>EngineRenderer</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -56,8 +56,6 @@
   <ImportGroup Label="ExtensionSettings">
   </ImportGroup>
   <ImportGroup Label="Shared">
-    <Import Project="..\..\Primitives\Primitives.vcxitems" Label="Shared" />
-    <Import Project="..\..\Platforms\Common\Platforms-Common.vcxitems" Label="Shared" />
   </ImportGroup>
   <ImportGroup Label="PropertySheets" Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
@@ -72,6 +70,18 @@
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
+    <LinkIncremental>true</LinkIncremental>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
+    <LinkIncremental>false</LinkIncremental>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
+    <LinkIncremental>true</LinkIncremental>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
+    <LinkIncremental>false</LinkIncremental>
+  </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
@@ -101,6 +111,8 @@
     <Link>
       <SubSystem>
       </SubSystem>
+      <EnableCOMDATFolding>true</EnableCOMDATFolding>
+      <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
   </ItemDefinitionGroup>
@@ -112,7 +124,6 @@
       <ConformanceMode>true</ConformanceMode>
       <PrecompiledHeader>Use</PrecompiledHeader>
       <PrecompiledHeaderFile>pch.h</PrecompiledHeaderFile>
-      <AdditionalIncludeDirectories>%(AdditionalIncludeDirectories);$(MSBuildThisFileDirectory)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>
@@ -130,133 +141,32 @@
       <ConformanceMode>true</ConformanceMode>
       <PrecompiledHeader>Use</PrecompiledHeader>
       <PrecompiledHeaderFile>pch.h</PrecompiledHeaderFile>
-      <AdditionalIncludeDirectories>%(AdditionalIncludeDirectories);$(MSBuildThisFileDirectory)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>
       </SubSystem>
+      <EnableCOMDATFolding>true</EnableCOMDATFolding>
+      <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="Math\AdvancedMath.h" />
-    <ClInclude Include="Common\Public\Array2DTools.hpp" />
-    <ClInclude Include="Common\Public\AsyncInitializer.hpp" />
-    <ClInclude Include="Common\Public\BasicFileStream.hpp" />
-    <ClInclude Include="Common\Public\BasicFileSystem.hpp" />
-    <ClInclude Include="Common\Public\BasicPlatformDebug.hpp" />
-    <ClInclude Include="Common\Public\BasicPlatformMisc.hpp" />
-    <ClInclude Include="Common\Public\CallbackWrapper.hpp" />
-    <ClInclude Include="Common\Public\Cast.hpp" />
-    <ClInclude Include="Math\Public\Box.h" />
-    <ClInclude Include="Math\Public\Matrix2x2.h" />
-    <ClInclude Include="Memory\Public\DataBlobImpl.hpp" />
-    <ClInclude Include="Memory\Public\DefaultRawMemoryAllocator.hpp" />
-    <ClInclude Include="Common\Public\DummyReferenceCounters.hpp" />
-    <ClInclude Include="Memory\Public\DynamicLinearAllocator.hpp" />
-    <ClInclude Include="Memory\Public\EngineMemory.h" />
-    <ClInclude Include="Common\Public\FastRand.hpp" />
-    <ClInclude Include="Common\Public\FileWrapper.hpp" />
-    <ClInclude Include="Common\Public\FilteringTools.hpp" />
-    <ClInclude Include="Memory\Public\FixedBlockMemoryAllocator.hpp" />
-    <ClInclude Include="Memory\Public\FixedLinearAllocator.hpp" />
-    <ClInclude Include="Common\Public\GeometryPrimitives.h" />
-    <ClInclude Include="Common\Public\HashUtils.hpp" />
-    <ClInclude Include="Common\Public\ImageTools.h" />
-    <ClInclude Include="Common\Public\LRUCache.hpp" />
-    <ClInclude Include="Common\Public\MemoryFileStream.hpp" />
-    <ClInclude Include="Common\Public\ObjectBase.hpp" />
-    <ClInclude Include="Common\Public\ObjectsRegistry.hpp" />
-    <ClInclude Include="Common\Public\ParsingTools.hpp" />
-    <ClInclude Include="Common\Public\ProxyDataBlob.hpp" />
-    <ClInclude Include="Common\Public\RefCntAutoPtr.hpp" />
-    <ClInclude Include="Common\Public\RefCntContainer.hpp" />
-    <ClInclude Include="Common\Public\RefCountedObjectImpl.hpp" />
-    <ClInclude Include="Common\Public\Serializer.hpp" />
-    <ClInclude Include="Common\Public\SpinLock.hpp" />
-    <ClInclude Include="Common\Public\StandardFile.hpp" />
-    <ClInclude Include="Memory\Public\STDAllocator.hpp" />
-    <ClInclude Include="Common\Public\StringDataBlobImpl.hpp" />
-    <ClInclude Include="Common\Public\StringPool.hpp" />
-    <ClInclude Include="Common\Public\StringTools.h" />
-    <ClInclude Include="Common\Public\StringTools.hpp" />
-    <ClInclude Include="Common\Public\ThreadPool.h" />
-    <ClInclude Include="Common\Public\ThreadPool.hpp" />
-    <ClInclude Include="Common\Public\ThreadSignal.hpp" />
-    <ClInclude Include="Common\Public\Timer.hpp" />
-    <ClInclude Include="Common\Public\UniqueIdentifier.hpp" />
-    <ClInclude Include="Math\Math.h" />
-    <ClInclude Include="Math\Public\Constants.h" />
-    <ClInclude Include="Math\Public\Matrix3x3.h" />
-    <ClInclude Include="Math\Public\Matrix4x3.h" />
-    <ClInclude Include="Math\Public\Matrix4x4.h" />
-    <ClInclude Include="Math\Public\Quaternion.h" />
-    <ClInclude Include="Math\Public\Common.h" />
-    <ClInclude Include="Math\Public\Vector2.h" />
-    <ClInclude Include="Math\Public\Vector3.h" />
-    <ClInclude Include="Math\Public\Vector4.h" />
-    <ClInclude Include="Math\Public\XMatrix.h" />
-    <ClInclude Include="Math\Public\XVector.h" />
-    <ClInclude Include="Math\Public\XVector_SSE.h" />
-    <ClInclude Include="Memory\Public\ArenaAllocator.h" />
-    <ClInclude Include="Memory\Public\ObjectPool.h" />
-    <ClInclude Include="Memory\Public\PagedMemoryPool.h" />
     <ClInclude Include="pch.h" />
-    <ClInclude Include="Runtime\Public\AppBase.h" />
-    <ClInclude Include="Runtime\Public\AppBaseWin64.h" />
-    <ClInclude Include="Runtime\Public\CommandLineParser.hpp" />
-    <ClInclude Include="Runtime\Public\InputController.h" />
-    <ClInclude Include="Runtime\Public\InputControllerBase.h" />
-    <ClInclude Include="Runtime\Public\InputControllerWin64.h" />
-    <ClInclude Include="Runtime\Public\NativeAppBase.hpp" />
-    <ClInclude Include="Runtime\Public\SampleApp.h" />
-    <ClInclude Include="Runtime\Public\SampleBase.h" />
-    <ClInclude Include="Runtime\Resources\Win64AppResource.h" />
+    <ClInclude Include="Public\Material.h" />
+    <ClInclude Include="Public\Renderer.h" />
+    <ClInclude Include="Public\RenderScene.h" />
+    <ClInclude Include="Public\StaticMesh.h" />
+    <ClInclude Include="Public\ViewFamily.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Common\Private\Array2DTools.cpp" />
-    <ClCompile Include="Common\Private\BasicFileStream.cpp" />
-    <ClCompile Include="Common\Private\BasicFileSystem.cpp" />
-    <ClCompile Include="Common\Private\BasicPlatformDebug.cpp" />
-    <ClCompile Include="Common\Private\BasicPlatformMisc.cpp" />
-    <ClCompile Include="Memory\Private\DataBlobImpl.cpp" />
-    <ClCompile Include="Memory\Private\DefaultRawMemoryAllocator.cpp" />
-    <ClCompile Include="Memory\Private\EngineMemory.cpp" />
-    <ClCompile Include="Common\Private\FileWrapper.cpp" />
-    <ClCompile Include="Memory\Private\FixedBlockMemoryAllocator.cpp" />
-    <ClCompile Include="Common\Private\GeometryPrimitives.cpp" />
-    <ClCompile Include="Common\Private\ImageTools.cpp" />
-    <ClCompile Include="Common\Private\MemoryFileStream.cpp" />
-    <ClCompile Include="Common\Private\Serializer.cpp" />
-    <ClCompile Include="Common\Private\SpinLock.cpp" />
-    <ClCompile Include="Common\Private\StandardFile.cpp" />
-    <ClCompile Include="Common\Private\ThreadPool.cpp" />
-    <ClCompile Include="Common\Private\Timer.cpp" />
-    <ClCompile Include="Memory\Private\ArenaAllocator.cpp" />
-    <ClCompile Include="Memory\Private\PagedMemoryPool.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
-    <ClCompile Include="Runtime\Private\InputControllerWin64.cpp" />
-    <ClCompile Include="Runtime\Private\SampleApp.cpp" />
-    <ClCompile Include="Runtime\Private\SampleAppWin64.cpp" />
-    <ClCompile Include="Runtime\Private\SampleBase.cpp" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Common\Public\SearchRecursive.inl" />
-  </ItemGroup>
-  <ItemGroup>
-    <Image Include="Runtime\Resources\directx11-logo.bmp" />
-    <Image Include="Runtime\Resources\directx12-logo.bmp" />
-    <Image Include="Runtime\Resources\opengl-logo.bmp" />
-    <Image Include="Runtime\Resources\vulkan-logo.bmp" />
-    <Image Include="Runtime\Resources\webgpu-logo.bmp" />
-  </ItemGroup>
-  <ItemGroup>
-    <ResourceCompile Include="Runtime\Resources\Win64AppResource.rc" />
+    <ClCompile Include="Private\Renderer.cpp" />
+    <ClCompile Include="Private\RenderScene.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
