--- a/ShizenEngine/ShizenEngine.vcxproj.filters
+++ b/ShizenEngine/ShizenEngine.vcxproj.filters
@@ -18,12 +18,18 @@
     <ClInclude Include="ShizenEngine.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="FirstPersonCamera.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="ShizenEngine.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="main.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="FirstPersonCamera.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
