--- a/Engine/Renderer/Engine-Renderer.vcxproj
+++ b/Engine/Renderer/Engine-Renderer.vcxproj
@@ -153,7 +153,7 @@
   <ItemGroup>
     <ClInclude Include="pch.h" />
     <ClInclude Include="Public\Handles.h" />
-    <ClInclude Include="Public\Material.h" />
+    <ClInclude Include="Public\MaterialInstance.h" />
     <ClInclude Include="Public\MaterialRenderData.h" />
     <ClInclude Include="Public\Renderer.h" />
     <ClInclude Include="Public\RenderScene.h" />
