--- a/Engine/AssetRuntime/Engine-AssetRuntime.vcxproj.filters
+++ b/Engine/AssetRuntime/Engine-AssetRuntime.vcxproj.filters
@@ -36,6 +36,12 @@
     <ClInclude Include="Public\AssetManager.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Public\AssetObject.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Public\AssetId.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="pch.cpp">
@@ -54,6 +60,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Private\AssetManager.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Private\AssetObject.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
