--- a/Engine/AssetRuntime/Engine-AssetRuntime.vcxproj
+++ b/Engine/AssetRuntime/Engine-AssetRuntime.vcxproj
@@ -153,7 +153,9 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="pch.h" />
+    <ClInclude Include="Public\AssetId.h" />
     <ClInclude Include="Public\AssetManager.h" />
+    <ClInclude Include="Public\AssetObject.h" />
     <ClInclude Include="Public\AssimpImporter.h" />
     <ClInclude Include="Public\AssetHandles.h" />
     <ClInclude Include="Public\MaterialAsset.h" />
@@ -168,6 +170,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="Private\AssetManager.cpp" />
+    <ClCompile Include="Private\AssetObject.cpp" />
     <ClCompile Include="Private\AssimpImporter.cpp" />
     <ClCompile Include="Private\MaterialAsset.cpp" />
     <ClCompile Include="Private\StaticMeshAsset.cpp" />
