--- a/Engine/Renderer/Engine-Renderer.vcxproj.filters
+++ b/Engine/Renderer/Engine-Renderer.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClInclude Include="Public\MaterialRenderData.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Public\Handles.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="pch.cpp">
